--- a/app/views/redsun_search/_wiki_page_result.html.erb
+++ b/app/views/redsun_search/_wiki_page_result.html.erb
@@ -1,8 +1,8 @@
-<h5><%= t "Wiki" %> <small><%= hit.score %></small></h5>
+<h5><%= t "label_wiki_page" %> <small><%= hit.score %></small></h5>
 <h3><%= link_to highlighter_for(:title, hit, record).gsub(/_/, " "), record %>
 <small>
 <br />
-<%= distance_of_time_in_words Time.now, record.updated_on %> | <%= record.content.author.login %></small></h3>
+<%= l(:label_updated_time, time_tag(record.updated_on)).html_safe %> | <%= record.content.author.login %></small></h3>
 <p>
   <%= hit.highlights(:wiki_content).collect { |segment| segment.format { |word| "<span class='highlight'>#{word}</span>" }}.join(" ").html_safe %>
 </p>
