--- a/app/views/redsun_search/_facet.html.erb
+++ b/app/views/redsun_search/_facet.html.erb
@@ -22,9 +22,9 @@
         %>
       <% end %>
 
-      <%= link_to t("facet.remove"),
+      <%= link_to t("redsun.facet.remove"),
       url_for(:controller => "redsun_search", :action => :index, :search_form => { facet.to_sym => "" }.reverse_merge(params[:search_form])),
-      :class => "remove" if params[:search_form][facet].present?  %>
+      :class => "remove" if params[:search_form][facet].present? %>
     </li>
     <% end -%>
   </ul>
