--- a/app/views/redsun_search/_issue_result.html.erb
+++ b/app/views/redsun_search/_issue_result.html.erb
@@ -1,9 +1,10 @@
-<h5><%= t "field_issue" %> <small><%= hit.score %></small></h5>
+<h5><%= t "field_issue" %> #<%= record.id %> in <%= record.try(:project).try(:name) %></small></h5>
 <h3><%= link_to highlighter_for(:subject, hit, record), record %>
   <small>
   <br />
-  <%= l(:label_updated_time, time_tag(record.updated_on)).html_safe %> | <%= record.author.name %></small></h3>
+  <% if record.updated_on %>
+  <%= l(:label_updated_time, time_tag(record.updated_on)).html_safe %> | <%- end -%><% if record.author %><%= record.author.name %><% end %></small></h3>
 <p>
   <%= hit.highlights(:description).collect { |segment| segment.format { |word| "<span class='highlight'>#{word}</span>" }}.join(" ").html_safe %>
 </p>
-<hr>
+
