better highlighting, pass project id to facets

--- a/app/views/redsun_search/_project_result.html.erb
+++ b/app/views/redsun_search/_project_result.html.erb
@@ -5,5 +5,5 @@
   <% if record.updated_on %>
   <%= l(:label_updated_time, time_tag(record.updated_on)).html_safe %><%- end -%></small></h3>
 <p>
-  <%= hit.highlights(:description).collect { |segment| segment.format { |word| "<span class='highlight'>#{word}</span>" }}.join(" ") %>
+  <%= strip_tags(hit.highlights(:description)).collect { |segment| segment.format { |word| "<span class='highlight'>#{word}</span>" }}.join(" ").html_safe %>
 </p>
