--- a/app/views/redsun_search/_results.html.erb
+++ b/app/views/redsun_search/_results.html.erb
@@ -6,7 +6,7 @@
 <% @search.each_hit_with_result do |hit, record| %>
   <div style="display: block; border-top: 1px solid #e9e9e9; clear: left; background: <%= !record.active? ? "red" : "" %>">
     <div style="float:left; width: 70%">
-      <%= render "#{hit.class_name.underscore}_result", hit: hit, record: record %>
+      <%= render "redsun_search/results/#{hit.class_name.underscore}_result", hit: hit, record: record %>
     </div>
     <div style="float:right;padding-top: 2em">
       <% if !record.active? %>
@@ -22,8 +22,16 @@
 <div style="text-align:center; clear: both">
  <%= will_paginate @search.results %>
 </div>
+    <style>
+      ul.facets {
+          max-height: 200px;
+          overflow: scroll;
+      }
+    </style>
+    
 <% content_for :sidebar do %>  
   <%= facet(:class_name, @search, :class_name) %>
+  <%= facet(:project_name, @search, :project_name) %>
   <%= facet(:active, @search, :active) %>
   <%= facet(:author_id, @search, :login) %>
   <%= facet(:status_id, @search, :name) %>
