make tests pass, highlight id in results, show wiki content

--- a/app/views/redsun_search/_results.html.erb
+++ b/app/views/redsun_search/_results.html.erb
@@ -34,6 +34,7 @@
   <%= facet(:project_name, @search, :project_name) %>
   <%= facet(:active, @search, :active) %>
   <%= facet(:author_id, @search, :login) %>
+  <%= facet(:assigned_to_id, @search, :login) %>
   <%= facet(:status_id, @search, :name) %>
   <%= facet(:tracker_id, @search, :name) %>
   <%= facet(:priority_id, @search, :name) %>
