--- a/app/views/redsun_search/results/_wiki_page_result.html.erb
+++ b/app/views/redsun_search/results/_wiki_page_result.html.erb
@@ -6,5 +6,9 @@
 </h5>
 <% end %>
 <p>
-  <%= strip_tags(hit.highlights(:wiki_content)).collect { |segment| segment.format { |word| "<span class='highlight'>#{word}</span>" }}.join(" ").html_safe %>
+  <% if hit.highlights(:wiki_content).present? %>
+    <%= strip_tags(hit.highlights(:wiki_content)).collect { |segment| segment.format { |word| "<span class='highlight'>#{word}</span>" }}.join(" ").html_safe %>
+  <% else %>
+    <%= truncate record.content.text, length: 500 %>
+  <% end %>
 </p>
