Issue #52784 HTML will be sanitized in issues and comments

--- a/app/views/redsun_search/results/_issue_result.html.erb
+++ b/app/views/redsun_search/results/_issue_result.html.erb
@@ -6,5 +6,5 @@
   </h5>
 <% end %>
 <p>
-  <%= highlighter_for :description, hit, record, true %>
+  <%= sanitize highlighter_for(:description, hit, record, true), tags: %w(span b strong a), attributes: %w(class style href target) %>
 </p>
