--- a/app/views/redsun_search/results/_journal_result.html.erb
+++ b/app/views/redsun_search/results/_journal_result.html.erb
@@ -9,6 +9,6 @@
   <% if hit.highlights(:notes).empty? %>
     <%= truncate strip_tags(record.notes), length: 100 %>
   <% else %>
-    <%= highlighter_for(:notes, hit, record) %>
+    <%= sanitize highlighter_for(:notes, hit, record, true), tags: %w(span b strong a), attributes: %w(class style href target) %>
   <% end %>
 </p>
