--- a/app/views/redsun_search/_results.html.erb
+++ b/app/views/redsun_search/_results.html.erb
@@ -3,7 +3,7 @@
   <%= will_paginate @search.results %>
 </div>
 
-<%= facet(:class_name, @search, :class_name) %>
+<%= facet(:class_name, @search, :class_name, "class_name_facet") %>
 
 <% @search.each_hit_with_result do |hit, record| %>
   <div style="display: block; border-top: 1px solid #e9e9e9; clear: left; background: <%= !record.active? ? "red" : "" %>">
