--- a/app/views/redsun_search/_class_name_facet.html.erb
+++ b/app/views/redsun_search/_class_name_facet.html.erb
@@ -1,20 +1,19 @@
 <% if results.facet(facet).present? && results.facet(facet).rows && results.facet(facet).rows.count >= 1 %>
-
   <div class="tabs">
     <ul>
-    <% results.facet(facet.to_sym).rows.each do |result| %>
       <li>
-          <%= link_to "#{t('redsun.facets.values.'+result.value.to_s.downcase.tr(" ", "_"), default: result.value)} (#{result.count})",
-          url_for(search_form: {facet.to_sym => result.value}.reverse_merge(params[:search_form])), class: :selected
-          %>
+        <%= link_to t("redsun.facet.reset_object_facet"), 
+                    url_for(search_form: {facet.to_sym => ""}.reverse_merge(params[:search_form]) ),
+                    class: params[:search_form][facet.to_sym].blank? ? "selected" : "" %>
       </li>
-      <% end -%>
-      <% if results.facet(facet).present? && results.facet(facet).rows && results.facet(facet).rows.count == 1 %>
+      <% results.facet(facet.to_sym).rows.each do |result| %>
         <li>
-          <%= link_to t("redsun.facet.reset_object_facet"), url_for(search_form: {facet.to_sym => ""}.reverse_merge(params[:search_form]) ) %>
+            <%= link_to "#{t('redsun.facets.values.'+result.value.to_s.downcase.tr(" ", "_"), default: result.value)} (#{result.count})",
+            url_for(search_form: {facet.to_sym => result.value}.reverse_merge(params[:search_form])), class: params[:search_form][facet.to_sym].blank? ? "" : "selected"
+            %>
         </li>
-      <% end %>
+      <% end -%>
+
     </ul>
   </div>
 <% end -%>
-
