--- a/app/views/redsun_search/_results.html.erb
+++ b/app/views/redsun_search/_results.html.erb
@@ -6,7 +6,7 @@
 <%= facet(:class_name, @search, :class_name, "class_name_facet") %>
 
 <% @search.each_hit_with_result do |hit, record| %>
-  <div style="display: block; border-top: 1px solid #e9e9e9; clear: left; background: <%= !record.active? ? "red" : "" %>">
+  <div style="background: <%= !record.active? ? "red" : "" %>" class="redsun-result">
     <div style="float:left; width: 70%" class="redsun-result-item">
       <%= render "redsun_search/results/#{hit.class_name.underscore}_result", hit: hit, record: record %>
     </div>
@@ -21,10 +21,20 @@
 
 <% end %>
 
-<div style="text-align:center; clear: both">
+<div style="text-align:center; clear: both;margin-top: 1em">
  <%= will_paginate @search.results %>
 </div>
     <style>
+      .redsun-result {
+        display: table; 
+        width: 100%;
+        border-bottom: 1px solid #e9e9e9; 
+        clear: left;
+        background: white;
+      }
+      .redsun-result:hover {
+        background: #f4f4f4;
+      }
       ul.facets {
         max-height: 200px;
         overflow: scroll;
