--- a/app/views/redsun_search/results/_issue_result.html.erb
+++ b/app/views/redsun_search/results/_issue_result.html.erb
@@ -6,6 +6,6 @@
   </h5>
 <% end %>
 <p>
-  <%= sanitize highlighter_for(:description, hit, record, true), tags: %w(span b strong a), attributes: %w(class id style href target) %>
-  <%= sanitize highlighter_for(:comments, hit, record, true), tags: %w(span b strong a), attributes: %w(class id style href target) %>
+  <%= sanitize highlighter_for(:description, hit, record), tags: %w(span b strong a), attributes: %w(class id style href target) %>
+  <%= sanitize highlighter_for(:comments, hit, record), tags: %w(span b strong a), attributes: %w(class id style href target) %>
 </p>
