--- a/app/views/redsun_search/results/_wiki_page_result.html.erb
+++ b/app/views/redsun_search/results/_wiki_page_result.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 <p>
   <% if hit.highlights(:wiki_content).present? %>
-    <%= highlighter_for(:wiki_content, hit, record, true) %>
+    <%= highlighter_for(:wiki_content, hit, record) %>
   <% else %>
     <%=  strip_tags(truncate(record.content.text, length: 500)) %>
   <% end %>
