--- a/app/views/redsun_search/_class_name_facet.html.erb
+++ b/app/views/redsun_search/_class_name_facet.html.erb
@@ -8,7 +8,7 @@
       </li>
       <% results.facet(facet.to_sym).rows.each do |result| %>
         <li>
-            <%= link_to "#{t('redsun.facets.values.'+result.value.to_s.downcase.tr(" ", "_"), default: result.value)} (#{result.count})",
+            <%= link_to "#{t('redsun.facets.values.'+result.value.to_s.downcase.tr(" ", "_"), default: result.value)} (#{number_with_delimiter(result.count, delimiter: '.')})",
             url_for(search_form: {facet.to_sym => result.value}.reverse_merge(params[:search_form])), class: params[:search_form][facet.to_sym].blank? ? "" : "selected"
             %>
         </li>
