--- a/app/views/redsun_search/index.html.erb
+++ b/app/views/redsun_search/index.html.erb
@@ -1,13 +1,94 @@
-<h2><%= t "redsun.header"%></h2>
-<%= form_for("search_form", :url => @redsun_path,
-                                      :html => { :style => "border: 1px solid #e9e9e9; padding: 1em; background: #f4f4f4; display: block", :method => :get }) do |f| %>
-  <%= f.label t("redsun.searchstring")%>
-  <%= f.text_field(:searchstring, :value => @searchstring, :title => "Search ...", :class => "toggle") %>
+    <style type="text/css">
+      .redsun-label-inactive{
+        background-color: red;
+        color: #fff;
+        padding: 10px;
+        border-radius: 3px;
+        margin-right: 10px;
+      }
+
+      #redsun-search-form {
+        border: 1px solid #e9e9e9;
+        padding: 1em;
+        background: #FFD;
+        display: block;
+        border-radius: 3px;
+        position: relative;
+      }
+      #redsun-search-form .redsun-search-button {
+        padding: 6px;
+        font-weight: bold;
+        margin-left: 5px;
+      }
+      #redsun-search-form #search_form_searchstring {
+        padding: 6px 3px;
+        width: 200px;
+      }
+      #redsun-search-form #search_form_scope {
+        margin-right: 5px;
+      }
+      .redsun-logo {
+        width: 100px;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+      }
+      .redsun-pagination-top {
+        text-align:center; 
+        margin-bottom: 2em;
+      }
+      .redsun-pagination-bottom {
+        text-align:center; 
+        clear: both;
+        margin-top: 1em;
+      }
+      .redsun-result {
+        display: table; 
+        width: 100%;
+        border-bottom: 1px solid #e9e9e9; 
+        clear: left;
+        background-color: #fff;
+      }
+      .redsun-highlight {
+        background-color: #fdbf8d;
+        padding: 0px;
+        box-shadow: 0.25em 0 0 #fdbf8d, -0.25em 0 0 #fdbf8d;
+        border-radius: 3px;
+      }
+      ul.facets {
+        max-height: 200px;
+        overflow: scroll;
+      }
+      .redsun-result-item {
+        padding-left: 10px;
+        float: left;
+        width: 80%;
+      }
+      .redsun-result:hover {
+        background: #f4f4f4;
+        -webkit-transition: background-color 100ms ease-in-out;
+        -moz-transition: background-color 100ms ease-in-out;
+        -ms-transition: background-color 100ms ease-in-out;
+        -o-transition: background-color 100ms ease-in-out;
+        transition: background-color 100ms ease-in-out;
+      }
+      .redsun-hints {
+        margin-top: 4px;
+        font-size: 0.8em;
+        opacity: 0.8;
+      }
+ 
+    </style>
+    
+
+<%= form_for("search_form", url: @redsun_path, html: { id: 'redsun-search-form', method: :get }) do |f| %>
+  <%= f.label t("redsun.searchstring") %>
+  <%= f.text_field(:searchstring, value: @searchstring, title: 'Search ...', :class => "toggle") %>
   <%= f.select :scope, @scope_selector, {:selected => @scope}, { class: "select2"}  %>
   <%= f.label t("redsun.order") %>
   <%= f.select :sort_field, Issue::SORT_FIELDS.collect { |o| [t("field_#{o}"), o]}, {:selected => @sort_field }, { class: "select2"} %>
   <%= f.select :sort_order, Issue::SORT_ORDER.collect {|o| [I18n.translate(o[1]), o.first]}, {:selected => @sort_order}, { class: "select2"}  %>
-  <%= f.submit t("redsun.search_button") %>
+  <%= f.submit t("redsun.search_button"), class: 'redsun-search-button' %>
   
   <%= link_to t("redsun.reset"), url_for(:controller => "redsun_search", :action => :index, :project_id => params[:project_id])%>
   <%= f.hidden_field(:author_id, value: params[:search_form][:author_id]) if params[:search_form][:author_id].present? %>
@@ -20,6 +101,8 @@
   <%= f.hidden_field(:active, value: params[:search_form][:active]) if params[:search_form][:active].present? %>
   <%= f.hidden_field(:project_name, value: params[:search_form][:project_name]) if params[:search_form][:project_name].present? %>
   <%= f.hidden_field(:project_id, value: @project.id) if @project %>
+  <div class="redsun-hints"><%=t('redsun.hints')%></div>
+  <%= image_tag 'RedSun_Logo_red_on_white.svg', plugin: 'redmine_redsun', class: 'redsun-logo'  %>
 <% end -%>
 
 <% if @search.results.present? %>
