--- a/app/views/redsun_search/results/_wiki_page_result.html.erb
+++ b/app/views/redsun_search/results/_wiki_page_result.html.erb
@@ -1,5 +1,5 @@
 <h5><%= t "label_wiki_page" %> in <%= link_to record.try(:project).try(:name), record.try(:project) %></h5>
-<h3><%= link_to highlighter_for(:title, hit, record).gsub(/_/, " "), record %></h3>
+<h3><%= link_to highlighter_for(:title, hit, record).html_safe, record %></h3>
 <% if record.content.updated_on && record.content.author %>
 <h5>
   <%= avatar(record.content.author, :size => "16") %><%= authoring(record.content.updated_on, record.content.author, label: :label_updated_time_by)%>
