--- a/app/views/redsun_search/results/_issue_result.html.erb
+++ b/app/views/redsun_search/results/_issue_result.html.erb
@@ -1,8 +1,13 @@
-<h5><%= t "field_issue" %> #<%= highlighter_for(:id, hit, record) %> in <%= link_to record.try(:project).try(:name), record.try(:project) %></small></h5>
-<h3><%= link_to highlighter_for(:subject, hit, record), record %></h3>
+<h5><%= t 'field_issue' %> #<%= highlighter_for(:id, hit, record) %> in <%= link_to record.try(:project).try(:name), record.try(:project) %></small></h5>
+<h3>
+  <%= link_to highlighter_for(:subject, hit, record), record %>
+  <small>
+    (<%= t('field_status') %>: <%= record.status %>)
+  </small>
+</h3>
 <% if record.created_on && record.author %>
   <h5>
-    <%= avatar(record.author, :size => "16") %><%= authoring(record.created_on, record.author )%>
+    <%= avatar(record.author, :size => "16") %> <%= authoring(record.created_on, record.author )%>
   </h5>
 <% end %>
 <p>
