--- a/app/views/redsun_search/index.html.erb
+++ b/app/views/redsun_search/index.html.erb
@@ -1,122 +1,203 @@
-    <style type="text/css">
-      .redsun-label-inactive{
-        background-color: red;
-        color: #fff;
-        padding: 10px;
-        border-radius: 3px;
-        margin-right: 10px;
-      }
+<style type="text/css">
+  .redsun-label-inactive{
+    background-color: red;
+    color: #fff;
+    padding: 10px;
+    border-radius: 3px;
+    margin-right: 10px;
+  }
+  #redsun-search-form {
+    border: 1px solid #e9e9e9;
+    padding: 1em;
+    background: #FFD;
+    display: block;
+    border-radius: 3px;
+    position: relative;
+  }
+  #redsun-search-form .redsun-search-button {
+    padding: 6px;
+    font-weight: bold;
+    margin-left: 5px;
+  }
+  #redsun-search-form #search_form_searchstring {
+    padding: 6px 3px;
+    width: 200px;
+  }
+  #redsun-search-form #search_form_scope {
+    margin-right: 5px;
+  }
+  .redsun-logo {
+    width: 100px;
+    float: right; // increase responsiveness, not pretty but at least the search button can be click
+  }
+  .redsun-pagination-top {
+    text-align:center; 
+    margin-bottom: 2em;
+  }
+  .redsun-pagination-bottom {
+    text-align:center; 
+    clear: both;
+    margin-top: 1em;
+  }
+  .redsun-result {
+    display: table; 
+    width: 100%;
+    border-bottom: 1px solid #e9e9e9; 
+    clear: left;
+    background-color: #fff;
+  }
+  .redsun-highlight {
+    background-color: #ffff99;
+    padding: 0px;
+    box-shadow: 0.25em 0 0 #ffff99, -0.25em 0 0 #ffff99;
+    border-radius: 2px;
+  }
+  ul.facets {
+    max-height: 200px;
+    overflow: scroll;
+  }
+  .redsun-result-item {
+    padding-left: 10px;
+    float: left;
+    width: 80%;
+  }
+  .redsun-result:hover {
+    background: #f4f4f4;
+    -webkit-transition: background-color 100ms ease-in-out;
+    -moz-transition: background-color 100ms ease-in-out;
+    -ms-transition: background-color 100ms ease-in-out;
+    -o-transition: background-color 100ms ease-in-out;
+    transition: background-color 100ms ease-in-out;
+  }
+  .redsun-hints {
+    margin-top: 4px;
+    font-size: 0.8em;
+    opacity: 0.8;
+  }
+  .redsun-select {
+    width: 100%;
+  }
 
-      #redsun-search-form {
-        border: 1px solid #e9e9e9;
-        padding: 1em;
-        background: #FFD;
-        display: block;
-        border-radius: 3px;
-        position: relative;
-      }
-      #redsun-search-form .redsun-search-button {
-        padding: 6px;
-        font-weight: bold;
-        margin-left: 5px;
-      }
-      #redsun-search-form #search_form_searchstring {
-        padding: 6px 3px;
-        width: 200px;
-      }
-      #redsun-search-form #search_form_scope {
-        margin-right: 5px;
-      }
-      .redsun-logo {
-        width: 100px;
-        position: absolute;
-        right: 10px;
-        top: 10px;
-      }
-      .redsun-pagination-top {
-        text-align:center; 
-        margin-bottom: 2em;
-      }
-      .redsun-pagination-bottom {
-        text-align:center; 
-        clear: both;
-        margin-top: 1em;
-      }
-      .redsun-result {
-        display: table; 
-        width: 100%;
-        border-bottom: 1px solid #e9e9e9; 
-        clear: left;
-        background-color: #fff;
-      }
-      .redsun-highlight {
-        background-color: #fdbf8d;
-        padding: 0px;
-        box-shadow: 0.25em 0 0 #fdbf8d, -0.25em 0 0 #fdbf8d;
-        border-radius: 3px;
-      }
-      ul.facets {
-        max-height: 200px;
-        overflow: scroll;
-      }
-      .redsun-result-item {
-        padding-left: 10px;
-        float: left;
-        width: 80%;
-      }
-      .redsun-result:hover {
-        background: #f4f4f4;
-        -webkit-transition: background-color 100ms ease-in-out;
-        -moz-transition: background-color 100ms ease-in-out;
-        -ms-transition: background-color 100ms ease-in-out;
-        -o-transition: background-color 100ms ease-in-out;
-        transition: background-color 100ms ease-in-out;
-      }
-      .redsun-hints {
-        margin-top: 4px;
-        font-size: 0.8em;
-        opacity: 0.8;
-      }
- 
-    </style>
-    
+  .redsun-pagination .pagination a:link,
+  .redsun-pagination .pagination a:visited,
+  .redsun-pagination .pagination .previous_page,
+  .redsun-pagination .pagination .next_page{
+    padding: 3px 8px;
+    border: 1px solid #ccc;
+    border-left: 0px;
+    line-height: 2em;
+    margin-bottom: 1em;
+    white-space: nowrap;
+    text-align: center;
+    margin-left: -4px;
+  }
 
-<%= form_for("search_form", url: @redsun_path, html: { id: 'redsun-search-form', method: :get }) do |f| %>
-  <%= f.label t("redsun.searchstring") %>
-  <%= f.text_field(:searchstring, value: @searchstring, title: 'Search ...', :class => "toggle") %>
-  <%= f.select :scope, @scope_selector, {:selected => @scope}, { class: "select2"}  %>
+  .redsun-pagination .pagination a:hover {
+    background: #EEE;
+    color: #888;
+    text-decoration: none;
+  }
+
+  .redsun-pagination .pagination span.gap,
+  .redsun-pagination .pagination em.current{
+    padding: 3px 8px;
+    border: 1px solid #ccc;
+    border-left: 0px;
+    line-height: 2em;
+    margin-bottom: 1em;
+    white-space: nowrap;
+    text-align: center;
+    color: #888;
+    font-style: normal;
+    margin-left: -5px;
+  }
+  .redsun-pagination .pagination em.current {
+    background: #628DB6;
+    border-color: #628DB6;
+    border-left: 0;
+    color: #fff;
+  }
+
+  .redsun-pagination .pagination span.previous_page,
+  .redsun-pagination .pagination span.next_page {
+    color: #888;
+  }
+
+  .redsun-pagination .pagination a:link:first-child,
+  .redsun-pagination .pagination a:visited:first-child,
+  .redsun-pagination .pagination .previous_page {
+    border-radius: 3px 0 0 3px;
+    border-left: 1px solid #ccc;
+  }
+  .redsun-pagination .pagination a:link:last-child,
+  .redsun-pagination .pagination a:visited:last-child {
+    border-radius: 0 3px 3px 0;
+  }
+
+  .redsun-container-inactive {
+    float: right;
+    padding-top: 2em;
+  }
+</style>
+
+<%= form_for('search_form', url: @redsun_path, html: { id: 'redsun-search-form', method: 'get' }) do |f| %>
+  <%= f.text_field(:searchstring, value: @searchstring, class: 'toggle', placeholder: t('redsun.searchstring')) %>
+  <%= f.select :scope, @scope_selector, { selected: @scope }, { class: 'select2' }  %>
   <%= f.label t("redsun.order") %>
-  <%= f.select :sort_field, Issue::SORT_FIELDS.collect { |o| [t("field_#{o}"), o]}, {:selected => @sort_field }, { class: "select2"} %>
-  <%= f.select :sort_order, Issue::SORT_ORDER.collect {|o| [I18n.translate(o[1]), o.first]}, {:selected => @sort_order}, { class: "select2"}  %>
-  <%= f.submit t("redsun.search_button"), class: 'redsun-search-button' %>
-  
-  <%= link_to t("redsun.reset"), url_for(:controller => "redsun_search", :action => :index, :project_id => params[:project_id])%>
+  <%= f.select :sort_field, Issue::SORT_FIELDS.collect { |o| [t("field_#{o}"), o]}, { selected: @sort_field }, { class: 'select2' } %>
+  <%= f.select :sort_order, Issue::SORT_ORDER.collect { |o| [t(o[1]), o.first]}, { selected: @sort_order }, { class: 'select2' }  %>
+
+  <%= f.submit t('redsun.search_button'), class: 'redsun-search-button' %>
+  <%= link_to t('redsun.reset'), url_for(controller: 'redsun_search', action: :index, project_id: params[:project_id]) %>
   <%= f.hidden_field(:author_id, value: params[:search_form][:author_id]) if params[:search_form][:author_id].present? %>
   <%= f.hidden_field(:status_id, value: params[:search_form][:status_id]) if params[:search_form][:status_id].present? %>
   <%= f.hidden_field(:tracker_id, value: params[:search_form][:tracker_id]) if params[:search_form][:tracker_id].present? %>
   <%= f.hidden_field(:priority_id, value: params[:search_form][:priority_id]) if params[:search_form][:priority_id].present? %>
   <%= f.hidden_field(:created_on, value: params[:search_form][:created_on]) if params[:search_form][:created_on].present? %>
   <%= f.hidden_field(:updated_on, value: params[:search_form][:updated_on]) if params[:search_form][:updated_on].present? %>
-  <%= f.hidden_field(:class_name, value: params[:search_form][:class_name]) if params[:search_form][:class_name].present? %>
+  <%= hidden_field_tag('search_form[class_name][]', params[:search_form][:class_name]) if params[:search_form][:class_name].present? %>
+  <%= f.hidden_field(:filetype, value: params[:search_form][:filetype]) if params[:search_form][:filetype].present? %>
   <%= f.hidden_field(:active, value: params[:search_form][:active]) if params[:search_form][:active].present? %>
   <%= f.hidden_field(:project_name, value: params[:search_form][:project_name]) if params[:search_form][:project_name].present? %>
   <%= f.hidden_field(:project_id, value: @project.id) if @project %>
-  <div class="redsun-hints"><%=t('redsun.hints')%></div>
-  <%= image_tag 'RedSun_Logo_red_on_white.svg', plugin: 'redmine_redsun', class: 'redsun-logo'  %>
+  <%= image_tag 'RedSun_Logo_red_on_white.svg', plugin: 'redmine_redsun', class: 'redsun-logo' %>
+  <div class='redsun-hints'>
+    <%=t('redsun.hints')%>
+  </div>
 <% end -%>
 
 <% if @search.results.present? %>
-  <%= render "results" %>
+  <%= render 'results' %>
 <% else %>
-     <p><%= t "redsun.no_results" %></p>
+  <p>
+    <%= t "redsun.no_results" %>
+  </p>
+  <% if @search.spellcheck_suggestions.present? && @search.spellcheck_suggestions.try(:first).try(:last) %>
+  <p>
+    <strong><%= t('redsun.spellcheck_question') %></strong>
+    <% @search.spellcheck_suggestions.first.last["suggestion"].each do |suggestion| %>
+      <%= link_to suggestion["word"], url_for(search_form: { searchstring: suggestion["word"] }.reverse_merge(params[:search_form])) %>
+    <% end %>
+  </p>
+  <% end %>
 <% end %>
 
 <script type="text/javascript" charset="utf-8">
   $(document).ready(function(){
-
     $('#search_form_searchstring').focus();
+    $('#redsun-search-form').on('change', function(){
+      $(this).trigger('submit');
+    });
     if ($.fn.select2 != undefined) {
-      $(".select2").select2();
+      $('#redsun-search-form .select2').select2();
+      $('.redsun-select2').select2({
+        width: '95%',
+        allowClear: true
+      }).on('select2-selecting', function(e){
+        window.location.href = e.val;
+      }).on('select2-clearing', function(e){
+        window.location.href = $(e.target).data('cleared-url');
+      })
     }
   })
 </script>
