--- a/app/views/redsun_search/_facet.html.erb
+++ b/app/views/redsun_search/_facet.html.erb
@@ -1,42 +1,45 @@
 <% if results.facet(facet).present? && results.facet(facet).rows && results.facet(facet).rows.count > 1 || params[:search_form][facet].present? %>
   <h3><%= t("redsun.facet.#{facet}")%></h3>
-<% if search2_enabled? %>
-  <select data-cleared-url="<%=url_for(:search_form => { facet => "" }.reverse_merge(params[:search_form]))%>" class="redsun-select2" size="1" data-placeholder="<%=t("redsun.placeholder.#{facet}", default: "Select a value!")%>">
-    <option></option>
-    <% results.facet(facet).rows.each do |result| %>
-      <% if (attribute.present? && result.instance.present?) %>
-        <% val = result.instance.send(attribute.to_sym) %>
-        <option <%=selected_attr_for(facet, result.value) %> value="<%=url_for(:search_form => {facet => result.value}.reverse_merge(params[:search_form]))%>">
-          <%= (val.present? ? val : "unknown" ) + " (#{number_with_delimiter(result.count, delimiter: '.')})" %>
-        </option>
-      <% else %>
-        <option <%=selected_attr_for(facet, result.value) %> value="<%=url_for(:search_form => {facet => result.value}.reverse_merge(params[:search_form]))%>">
-          <%= "#{result.value} (#{number_with_delimiter(result.count, delimiter: '.')})" %>
-        </option>
-      <% end %>
-    <% end %>
-  </select>
-  <% else %>
-    <ul class="facets">
-    <% results.facet(facet).rows.each do |result| %>
-      <li>
-        <% if (attribute.present? && result.instance.present?) %>
-            <% label = result.instance.send(attribute.to_sym) %>
-            <%= link_to((label.present? ? label : "unknown" ) + " (#{result.count})",
-            url_for(:search_form => {facet => result.value}.reverse_merge(params[:search_form])))
-            %>
-
+  <% params[:search_form][facet] ||= [] %>
+ 
+  <% if search2_enabled? %>
+    <select multiple size="5" class="redsun-select2" data-placeholder="<%=t("redsun.placeholder.#{facet}", default: "Select a value!")%>">
+      <option></option>
+      <% results.facet(facet).rows.each do |result| %>
+        <% if (attribute.present? && result.instance.present?)
+          val = result.instance.send(attribute.to_sym)
+            label = (val.present? ? val : "unknown" ) + " (#{number_with_delimiter(result.count, delimiter: '.')})"
+          else
+            label = "#{result.value} (#{number_with_delimiter(result.count, delimiter: '.')})"
+        end %>
+        <% Rails.logger.info "#{facet} Result Value: " + result.value.to_s %>
+        <% Rails.logger.info "#{facet} Chosen Values: " + params[:search_form][facet].join(', ') %>
+        <% if result.value.to_s.in?(params[:search_form][facet]) %>
+          <option value='<%= result.value%>' data-facet-url='<%= url_for(search_form: { facet => (params[:search_form][facet] - [result.value.to_s])}.reverse_merge(params[:search_form])) %>' selected><%= label %></option>
         <% else %>
-          <%= link_to "#{result.value} (#{result.count})",
-          url_for(:search_form => {facet => result.value}.reverse_merge(params[:search_form]))
-          %>
+          <option data-facet-url='<%= url_for(search_form: { facet => (params[:search_form][facet] + [result.value])}.reverse_merge(params[:search_form])) %>' value='<%= result.value.to_s %>'><%= label %></option>
         <% end %>
-    
-        <%= link_to t("redsun.facet.remove"),
-        url_for(:search_form => { facet => "" }.reverse_merge(params[:search_form])),
-        :class => "remove" if params[:search_form][facet].present? %>
-      </li>
-      <% end -%>
-    </ul>
-  <% end %>
+      <% end %>
+    </select>
+    <% else %>
+      <ul class="facets">
+        <% results.facet(facet).rows.each do |result| %>
+          <li>
+            <% if (attribute.present? && result.instance.present?) %>
+              <% label = result.instance.send(attribute.to_sym) %>
+              <%= link_to((label.present? ? label : "unknown" ) + " (#{result.count})",
+                  url_for(:search_form => { facet => (params[:search_form][facet] + [result.value]) }.reverse_merge(params[:search_form]))) %>
+            <% else %>
+              <%= link_to link_to "#{result.value} (#{result.count})",
+                  url_for(:search_form => { facet => (params[:search_form][facet] + [result.value]) }.reverse_merge(params[:search_form]))%>
+            <% end %>
+            <% if params[:search_form][facet].present? && result.value.to_s.in?(params[:search_form][facet]) %>
+              <%= link_to t("redsun.facet.remove"),
+                          url_for(search_form: { facet.to_sym => (params[:search_form][facet] - [result.value.to_s]) }.reverse_merge(params[:search_form]) ),
+                          class: "remove"  %>
+            <% end %>
+          </li>
+        <% end -%>
+      </ul>
+    <% end %>
 <% end -%>
